infrastructure/networking/traefik/traefik-external/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-external
  namespace: traefik-external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    external-dns.alpha.kubernetes.io/target: "x.relyq.dev"
    external-dns.alpha.kubernetes.io/dns: cloudflare
spec:
  gatewayClassName: traefik-external
  listeners:
    - name: web
      protocol: HTTP
      port: 8000
      hostname: "*.relyq.dev"
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      protocol: HTTPS
      port: 8443
      hostname: "*.relyq.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-relyq-dev-tls-external
            kind: Secret
            namespace: traefik-external
      allowedRoutes:
        namespaces:
          from: All
    - name: netbird-grpc-signal
      port: 10000
      protocol: HTTPS
      hostname: "*.relyq.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-relyq-dev-tls-external
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: netbird-relay
      port: 33080
      protocol: HTTPS
      hostname: "*.relyq.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-relyq-dev-tls-external
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
